--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "webpack --env.production"
   },
   "dependencies": {
-    "dat-gui": "^0.5.0",
+    "dat.gui": "^0.7.3",
     "gl-matrix": "^2.4.0",
     "spectorjs": "^0.9.0",
     "stats-js": "^1.0.0-alpha1",
