--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-env": "^1.6.0",
-    "webpack": "^3.7.1",
-    "webpack-dev-server": "^2.9.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0",
     "webpack-glsl-loader": "^1.0.1"
   }
 }
