--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
     "build": "webpack --env.production"
   },
   "dependencies": {
-    "dat.gui": "^0.7.3",
-    "gl-matrix": "^2.4.0",
-    "spectorjs": "^0.9.0",
-    "stats-js": "^1.0.0-alpha1",
-    "three": "^0.87.1",
-    "three-js": "^79.0.0",
-    "three-orbitcontrols": "^1.2.1",
-    "webgl-debug": "^1.0.2"
+    "dat.gui": "0.7.3",
+    "gl-matrix": "2.4.0",
+    "spectorjs": "0.9.0",
+    "stats-js": "1.0.0-alpha1",
+    "three": "0.87.1",
+    "three-js": "79.0.0",
+    "three-orbitcontrols": "1.2.1",
+    "webgl-debug": "1.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-preset-env": "^1.6.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-glsl-loader": "^1.0.1"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-minify-webpack-plugin": "0.2.0",
+    "babel-preset-env": "1.6.0",
+    "webpack": "3.7.1",
+    "webpack-dev-server": "2.9.2",
+    "webpack-glsl-loader": "1.0.1"
   }
 }
