--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "devDependencies": {
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-minify-webpack-plugin": "0.2.0",
+    "babel-loader": "^7.1.5",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-env": "1.6.0",
-    "webpack": "3.7.1",
-    "webpack-dev-server": "2.9.2",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.11.5",
     "webpack-glsl-loader": "1.0.1"
-  }
+  },
+  "name": "Project5-WebGL-Forward-Plus-and-Clustered-Deferred"
 }
